# new-chapter

./: .editorconfig  .gitignore  .pre-commit-config.yaml  10080.doc  10086.doc  10090.doc  9201.docx  AGENTS.md  README.md  pyproject.toml  step1_convert_docx.py  step2_analyze_docx.py
.codex/skills/project-docling-engineer/: SKILL.md
.codex/skills/project-docling-engineer/agents/: openai.yaml
.codex/skills/project-docling-engineer/references/: docling-implementation-guide.md  docx-rtl-notes.md  engineering-checklist.md
.codex/skills/project-docling-engineer/scripts/: run_quality_gate.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
config/: default.yaml
docs/: implementation-playbook.md  multi-machine-setup.md  tooling-research-notes.md
fixtures/sample_forms/: README.md
output/doc/: codex-engineering-upgrade-mindmap-report.docx
scripts/: bootstrap_dev.ps1  bootstrap_dev.sh  export_previous_response_report.py  install_repo_skills.py  install_vscode_extensions.ps1
src/docmirror/: __init__.py  __main__.py  cli.py  config.py  context.py  interfaces.py  logging_utils.py
src/docmirror/adapters/: __init__.py  docling_adapter.py  ocr_helper.py  ooxml_renderer.py  opencv_helper.py
src/docmirror/ir/: __init__.py  models.py
src/docmirror/stages/: __init__.py  analyze.py  preprocess.py  render_docx.py  run_all.py  validate.py
src/docmirror/storage/: __init__.py  ir_store.py
tests/: test_cli.py  test_cli_unittest.py
tests/fixtures/: sample_config.yaml
